Make sure images don't break on small screens

--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -20,6 +20,10 @@ h1, h2, h3, h4, h5, h6 {
     line-height: 1.2;
 }
 
+img {
+    max-width: 100%; height: auto;
+}
+
 body { 
     font-family: Asap, sans-serif; font-size: 1.5rem;
     line-height: 1.5; 
